[package]
name = "pico-spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["task-arena-size-163840", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", features = ["time-driver", "critical-section-impl", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["dhcpv4", "dns", "tcp", "udp", "defmt"] }
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embedded-nal-async = "0.7.1"
smoltcp = {version = "0.11.0", default-features = false, features = ["dns-max-server-count-4", "defmt"]}
defmt = "0.3"
defmt-rtt = "0.3"
fixed = "1.23.1"
fixed-macro = "1.2"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1.2"
cyw43 = { git = "https://github.com/embassy-rs/embassy.git" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git" }
static_cell = "2.0.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
reqwless = { version = "0.11.0", features = ["defmt", "alloc"] }
serde = {version = "1.0.196", default-features = false, features = ["derive"]}
serde-json-core = { version = "0.5.1", features = ["custom-error-messages"] }
httparse = {version = "1.8.0", default-features = false }
heapless = { version = "0.8.0", features = ["serde", "defmt-03"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
log = "0.4"
embedded-tls = {version = "0.17.0", default-features = false, features = ["alloc", "defmt"]}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
